--- a/hoogle.cabal
+++ b/hoogle.cabal
@@ -131,7 +131,7 @@ library
         General.Web
 
 
-executable hoogle
+executable hoogle-custom
     main-is:            src/Main.hs
     default-language:   Haskell2010
     ghc-options:        -threaded
